--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mdx-js/react": "^1.5.7",
     "@types/styled-components": "^5.0.1",
     "babel-plugin-styled-components": "^1.10.7",
+    "framer-motion": "^1.10.2",
     "gatsby": "^2.18.3",
     "gatsby-image": "^2.2.33",
     "gatsby-plugin-graphql-codegen": "^2.6.1",
