--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-graphql-codegen": "^2.6.1",
     "gatsby-plugin-manifest": "^2.2.29",
     "gatsby-plugin-mdx": "^1.0.74",
+    "gatsby-plugin-netlify-cms": "^4.3.3",
     "gatsby-plugin-offline": "^3.0.23",
     "gatsby-plugin-react-helmet": "^3.1.15",
     "gatsby-plugin-sharp": "^2.3.3",
@@ -22,6 +23,7 @@
     "gatsby-plugin-typescript": "^2.3.1",
     "gatsby-source-filesystem": "^2.1.38",
     "gatsby-transformer-sharp": "^2.3.5",
+    "netlify-cms-app": "^2.12.13",
     "normalize.css": "^8.0.1",
     "prism-react-renderer": "^1.0.2",
     "prop-types": "^15.7.2",
