--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,7 +8,7 @@ local_backend: true
 
 media_folder: static/assets
 public_folder: /assets
-publish_mode: editorial_workflow
+# publish_mode: editorial_workflow
 
 collections:
   - name: posts
