feat: update gatsby version

--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "@types/styled-components": "^5.1.11",
     "babel-plugin-styled-components": "^1.13.2",
     "framer-motion": "^1.11.1",
-    "gatsby": "^3.9.1",
+    "gatsby": "^3.11.0-next.0",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-graphql-codegen": "^2.7.3",
     "gatsby-plugin-image": "^1.9.0",
     "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-mdx": "^2.9.0",
-    "gatsby-plugin-netlify-cms": "^4.10.1",
+    "gatsby-plugin-netlify-cms": "^5.11.0-next.0",
     "gatsby-plugin-offline": "^3.10.2",
     "gatsby-plugin-react-helmet": "^3.10.0",
     "gatsby-plugin-sharp": "^3.9.0",
