--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,7 +8,7 @@ local_backend: true
 
 media_folder: static/assets
 public_folder: /assets
-# publish_mode: editorial_workflow
+publish_mode: editorial_workflow
 
 collections:
   - name: posts
@@ -17,8 +17,9 @@ collections:
     path: '{{slug}}/index'
     create: true
     fields:
-      - { name: title, label: Title }
-      - { name: description, label: Description }
-      - { name: date, label: Date, widget: datetime }
+      - { name: title, label: Title, required: true }
+      - { name: tags, label: Tags, widget: list }
+      - { name: description, label: Description, required: true }
+      - { name: date, label: Date, widget: datetime, required: true }
       - { name: published, label: Published, widget: 'boolean', default: false }
-      - { name: body, label: Body, widget: markdown }
+      - { name: body, label: Body, widget: markdown, required: true }
