--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,8 +17,8 @@ collections:
     path: '{{slug}}/index'
     create: true
     fields:
-      - { name: title, label: Title }
-      - { name: description, label: Description }
-      - { name: date, label: Date, widget: datetime }
+      - { name: title, label: Title, required: true }
+      - { name: description, label: Description, required: true }
+      - { name: date, label: Date, widget: datetime, required: true }
       - { name: published, label: Published, widget: 'boolean', default: false }
       - { name: body, label: Body, widget: markdown }
